KSENROLL-12639 - Fixed Sonar Critical Performance issues
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@68562 0ac02d80-fb3f-11dc-a574-c57244a850eb